syntax = "proto3";

option csharp_namespace = "SimpleCrudWithGRPC.Protos";

service PersonService {
  rpc CreatePerson (CreatePersonRequest) returns (CreatePersonResponse);
  rpc GetPersonById (GetPersonByIdRequest) returns (GetPersonByIdResponse);
  rpc GetAllPersons (GetAllPersonsRequest) returns (GetAllPersonsResponse);
  rpc UpdatePerson (UpdatePersonRequest) returns (UpdatePersonResponse);
  rpc DeletePerson (DeletePersonRequest) returns (DeletePersonResponse);
}

message CreatePersonRequest {
  string firstName = 1;
  string lastName = 2;
  string nationalCode = 3;
  string dateOfBirth = 4;
}

message CreatePersonResponse {
  bool success = 1;
}

message GetPersonByIdRequest {
  int32 id = 1;
}

message GetPersonByIdResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  string dateOfBirth = 5;
}

message GetAllPersonsRequest {}

message GetAllPersonsResponse {
  repeated Person persons = 1;
}

message UpdatePersonRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  string dateOfBirth = 5;
}

message UpdatePersonResponse {
  bool success = 1;
}

message DeletePersonRequest {
  int32 id = 1;
}

message DeletePersonResponse {
  bool success = 1;
}

message Person {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  string dateOfBirth = 5;
}

